# HAT_prediction_GNN

./: .gitignore  MANIFEST.in  README.md  setup.cfg
src/barriernn_p/: PAiNN_adapted.py  __init__.py  analyze_trained_model.py  input_generation.py
src/barriernn_p/models/2208_full/full_01/: eval  hparas.json
src/barriernn_p/models/2208_full/full_01/full_01.tf/: keras_metadata.pb  saved_model.pb
src/barriernn_p/models/2208_full/full_02/: eval  hparas.json
src/barriernn_p/models/2208_full/full_02/full_02.tf/: keras_metadata.pb  saved_model.pb
src/barriernn_p/models/2208_full/full_03/: eval  hparas.json
src/barriernn_p/models/2208_full/full_03/full_03.tf/: keras_metadata.pb  saved_model.pb
src/barriernn_p/models/2208_full/full_04/: eval  hparas.json
src/barriernn_p/models/2208_full/full_04/full_04.tf/: saved_model.pb
src/barriernn_p/models/2208_full/full_05/: eval  hparas.json
src/barriernn_p/models/2208_full/full_05/full_05.tf/: keras_metadata.pb  saved_model.pb
src/barriernn_p/models/2208_full/full_06/: eval  hparas.json
src/barriernn_p/models/2208_full/full_06/full_06.tf/: keras_metadata.pb  saved_model.pb
src/barriernn_p/models/2208_full/full_07/: eval  hparas.json
src/barriernn_p/models/2208_full/full_07/full_07.tf/: keras_metadata.pb  saved_model.pb
src/barriernn_p/models/2208_full/full_16/: eval  hparas.json
src/barriernn_p/models/2208_full/full_16/full_16.tf/: saved_model.pb
src/barriernn_p/models/2208_full/full_17/: eval  hparas.json
src/barriernn_p/models/2208_full/full_18/: eval  hparas.json
(+33 files in other folders)
