[metadata]
name = barriernn_p
version = 0.1
license = MIT
description = Load a GNN for reaction barrier prediction.
long_description = file: README.md
author = Kai Riedmiller
author_email = kai.riedmiller@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    ase
    numpy
    tqdm
    kgcnn==2.1.0
    tensorflow==2.10

python_requires = >= 3.8
   
[options.packages.find]
where=src
